# 3d_engine_learn

./: Cargo.toml
src/: app.rs  main.rs
src/assets/caro_tiles/: Tiles074.png.import  Tiles074_2K-JPG.blend  Tiles074_2K-JPG.blend.import  Tiles074_2K-JPG.mtlx  Tiles074_2K-JPG.tres  Tiles074_2K-JPG.usdc  Tiles074_2K-JPG_Color.jpg.import  Tiles074_2K-JPG_Displacement.jpg.import  Tiles074_2K-JPG_NormalDX.jpg.import  Tiles074_2K-JPG_NormalGL.jpg.import  Tiles074_2K-JPG_Roughness.jpg.import
src/camera/: mod.rs  orbit.rs
src/gpu/: context.rs  mod.rs  texture.rs
src/gui/: integration.rs  light_settings.rs  mod.rs  model_panel.rs  object_controls.rs  panel.rs  vfx_panel.rs
src/input/: mod.rs
src/loader/: gltf_loader.rs
src/renderer/: mod.rs  pass.rs  pipeline.rs  sky.rs  vertex.rs
src/scene/: ground.rs  light.rs  material.rs  mesh.rs  mod.rs  particle.rs  picking.rs  transform.rs
src/shaders/: outline.wgsl  particle.wgsl  phong.wgsl  shader.wgsl  sky.wgsl
