[package]
name = "render_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "29.0"
winit = "0.30"
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
bytemuck = { version = "1.21", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck"] }
gltf = "1.4"
image = "0.25"
egui = "0.34"
egui-wgpu = { version = "0.34", features = ["winit"] }
egui-winit = "0.34"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }
